--- a/index.html
+++ b/index.html
@@ -31,18 +31,11 @@
     </header>
     <main>
         <div id="carousel">
+            <img id="carousel-image" src="" alt="Carrossel de Imagens">
         </div>
         <div id="carousel-title">
         </div>
-        
-        <script>
-             //insert each image on carousel
-            carouselArr.push(new Carousel("img/imagem_1.jpg","Esta é a nova Ranger Ford 2022. Verifique novidades.","lancamento.html"));
-            carouselArr.push(new Carousel("img/imagem_2.jpg","Ford a nossa história","#"));
-            carouselArr.push(new Carousel("img/imagem_3.jpg","Nova Ford Bronco Sport 2022","lancamento.html"));
-            Carousel.Start(carouselArr);
-        </script>
-
+        <script src="js/carousel.js"></script>
     </main>
     <footer>
         <nav id="social">
@@ -57,5 +50,12 @@
            <img src="img/ford-96.png" width="70"  />
         </div>
     </footer>    
+    <script>
+        //insert each image on carousel
+       carouselArr.push(new Carousel("./img/imagem_1.jpg","Esta é a nova Ranger Ford 2022. Verifique novidades.","lancamento.html"));
+       carouselArr.push(new Carousel("./img/imagem_2.jpg","Ford a nossa história","#"));
+       carouselArr.push(new Carousel("./img/imagem_3.jpg","Nova Ford Bronco Sport 2022","lancamento.html"));
+       Carousel.Start(carouselArr);
+   </script>
 </body>
 </html>
