--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script>
         //insert each image on carousel
        carouselArr.push(new Carousel("./img/imagem_1.jpg","Esta é a nova Ranger Ford 2022. Verifique novidades.","lancamento.html"));
-       carouselArr.push(new Carousel("./img/imagem_2.jpg","Ford a nossa história","#"));
+       carouselArr.push(new Carousel("./img/imagem_2.jpg","Ford a nossa história","https://www.ford.com.br/"));
        carouselArr.push(new Carousel("./img/imagem_3.jpg","Nova Ford Bronco Sport 2022","lancamento.html"));
        Carousel.Start(carouselArr);
    </script>
