--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <header>       
         <div>
-            <img src="img/logo-ford-256.png" width="150" class="logo" />
-        </div>
+            <img src="img/logo-ford-256.png" width="150" class="logo" /> 
         <nav>
             <ul>
                 <li>
@@ -31,7 +30,7 @@
     </header>
     <main>
         <div id="carousel">
-            <img id="carousel-image" src="" alt="Carrossel de Imagens">
+            <img id="carousel-image" src="" alt="Carrossel de Imagens">  <!-- aqui eu insiro as imagens do carrosel de forma mais facil -->
         </div>
         <div id="carousel-title">
         </div>
@@ -47,7 +46,8 @@
             </ul>
         </nav>
         <div>
-           <img src="img/ford-96.png" width="70"  />
+           <img src="img/ford-96.png" width="70"  /> 
+        </div>
         </div>
     </footer>    
     <script>
