melhorando umas coisas

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     </header>
     <main>
         <div id="carousel">
-            <img id="carousel-image" src="" alt="Carrossel de Imagens">  <!-- aqui eu insiro as imagens do carrosel de forma mais facil -->
+            <img id="carousel-image" alt="Carrossel de Imagens">  <!-- aqui eu insiro as imagens do carrosel de forma mais facil -->
         </div>
         <div id="carousel-title">
         </div>
-        <script src="js/carousel.js"></script>
     </main>
     <footer>
         <nav id="social">
