--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ford</title>    
-    <link href="css/reset.css" rel="stylesheet">
+    <!-- <link href="css/reset.css" rel="stylesheet"> --> 
     <link href="css/style.css" rel="stylesheet">
+    <link href="/css/responsividade_index.css" rel="stylesheet" >
     <script src="js/carousel.js"></script>
 </head>
 <body>
@@ -45,7 +46,8 @@
             </ul>
         </nav>
         <div>
-           <img src="img/ford-96.png" width="70"  /> 
+           <img src="img/ford-96.png" /> 
+           <!-- <img src="img/ford-96.png" width="70"  /> -->
         </div>
         </div>
     </footer>    
