--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div>
             <img src="img/logo-ford-256.png" width="150" class="logo" /> 
         <nav>
-            <ul>
+            <ul class="cabecalho">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
