--- a/lancamento.html
+++ b/lancamento.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ford</title>    
-    <link href="css/reset.css" rel="stylesheet">
+    <!-- <link href="css/reset.css" rel="stylesheet"> -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/lancamento.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/responsividade_lancamento.css">
+
+ 
     <script src="js/compare.js"></script>
 </head>
 <body>
