--- a/contato.html
+++ b/contato.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ford</title>    
-    <link href="css/reset.css" rel="stylesheet">
+    <!-- <link href="css/reset.css" rel="stylesheet"> -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
+    <link href="./css/responsividade_contato.css">
     <script src="js/form.js"></script>
 </head>
 <body>
@@ -38,7 +39,7 @@
             <div>
                 <h2 class="titulo">Sobre Você</h2>
             <form onsubmit="Post(this);">
-                <input type="text" name="nome" placeholder="NOME*" class="fordform" required>
+                <input type="text" name="nome" id="name" placeholder="NOME*" class="fordform" required>
                 <input type="text" name="email" placeholder="E-MAIL*" class="fordform" required>
                 <input type="text" name="cpf" placeholder="CPF*" class="fordform" required>
                 <input type="text" name="sobrenome" placeholder="SOBRENOME*" class="fordform" required>
