--- a/lancamento.html
+++ b/lancamento.html
@@ -19,7 +19,7 @@
             <img src="img/logo-ford-256.png" width="150" class="logo" />
         </div>
         <nav>
-            <ul>
+            <ul class="cabecalho">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
