--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <div id="carousel">
-            <img id="carousel-image" alt="Carrossel de Imagens">  <!-- aqui eu insiro as imagens do carrosel de forma mais facil -->
+            <img id="carousel-image" alt="Carrossel de Imagens" >  <!-- aqui eu insiro as imagens do carrosel de forma mais facil -->
         </div>
         <div id="carousel-title">
         </div>
@@ -56,7 +56,7 @@
        carouselArr.push(new Carousel("./img/imagem_1.jpg","Esta é a nova Ranger Ford 2022. Verifique novidades.","lancamento.html"));
        carouselArr.push(new Carousel("./img/imagem_2.jpg","Ford a nossa história","https://www.ford.com.br/"));
        carouselArr.push(new Carousel("./img/imagem_3.jpg","Nova Ford Bronco Sport 2022","lancamento.html"));
-       Carousel.Start(carouselArr);
+       Carousel.Start(carouselArr); //dica do danki, colocar o seu script antes do final do body para ser carregado corretamente
    </script>
 </body>
 </html>
