--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
     <!-- <link href="css/reset.css" rel="stylesheet"> -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/responsividade_form.css">
     
     <script src="js/form.js"></script>
 </head>
@@ -58,9 +59,9 @@
         <nav id="social">
             <ul>
                 <li><span class="redesociais">Redes Sociais</span></li>
-                <li><a href="#" title="Facebook"><img src="img/facebook-50.png"></a></li>
-                <li><a href="#" title="YouTube"><img src="img/youtube-squared-50.png"></a></li>
-                <li><a href="#" title="Instagram"><img src="img/instagram-logo-50.png"></a></li>
+                <li><a href="https://www.facebook.com/FordBrasil/" title="Facebook"><img src="img/facebook-50.png" alt="logo facebook"></a></li>
+                <li><a href="https://www.youtube.com/fordbrasil" title="YouTube"><img src="img/youtube-squared-50.png" alt="logo youtube"></a></li>
+                <li><a href="https://www.instagram.com/fordbrasil/" title="Instagram"><img src="img/instagram-logo-50.png" alt="logo instagram"></a></li>
             </ul>
         </nav>
         <div>
