--- a/contato.html
+++ b/contato.html
@@ -44,7 +44,7 @@
                 <input type="text" name="email" placeholder="E-MAIL*" class="fordform" required>
                 <input type="text" name="cpf" placeholder="CPF*" class="fordform" required>
                 <input type="text" name="sobrenome" placeholder="SOBRENOME*" class="fordform" required>
-                <input type="text" name="telefone" placeholder="TELEFONE*" class="fordform" required>
+                <input type="text" name="telefone" placeholder="TELEFONE*" id="telefone" class="fordform" required>
                 <select name="contato" class="fordform" required>
                     <option selected>COMO DESEJA SER CONTATADO</option>
                     <option>TELEFONE</option>
