--- a/lancamento.html
+++ b/lancamento.html
@@ -37,7 +37,7 @@
         <div>
             <iframe style = "display: block; margin-bottom: 30px; margin-left: auto; margin-right: auto; width: 100%;
             height: 500px;" src="https://www.youtube-nocookie.com/embed/vQsryuNmsL0?controls=0&autoplay=1&modestbranding=0&loop=1&mute=1&rel=0&hd=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <p class="texto"><a href="https://www.ford.com.br/picapes/ranger/">Veja mais sobre aqui. </a></p>
+            <p class="texto"><a href="https://www.ford.com.br/picapes/ranger/">Ford Ready For More  </a></p>
     </div>
         <div>
             <ul class="modelcars">
