--- a/contato.html
+++ b/contato.html
@@ -42,9 +42,9 @@
             <form onsubmit="Post(this);">
                 <input type="text" name="nome" id="name" placeholder="NOME*" class="fordform" required>
                 <input type="text" name="email" placeholder="E-MAIL*" class="fordform" required>
-                <input type="text" name="cpf" placeholder="CPF*" class="fordform" required>
-                <input type="text" name="sobrenome" placeholder="SOBRENOME*" class="fordform" required>
-                <input type="text" name="telefone" placeholder="TELEFONE*" id="telefone" class="fordform" required>
+                <input type="text" name="cpf" id="cpf" placeholder="CPF*" class="fordform" required>
+                <input type="text" name="sobrenome"  placeholder="SOBRENOME*" class="fordform" required>
+                <input type="text" name="telefone" id="telefone" placeholder="TELEFONE*" id="telefone" class="fordform" required>
                 <select name="contato" class="fordform" required>
                     <option selected>COMO DESEJA SER CONTATADO</option>
                     <option>TELEFONE</option>
@@ -59,9 +59,9 @@
         <nav id="social">
             <ul>
                 <li><span class="redesociais">Redes Sociais</span></li>
-                <li><a href="https://www.facebook.com/FordBrasil/" title="Facebook"><img src="img/facebook-50.png" alt="logo facebook"></a></li>
-                <li><a href="https://www.youtube.com/fordbrasil" title="YouTube"><img src="img/youtube-squared-50.png" alt="logo youtube"></a></li>
-                <li><a href="https://www.instagram.com/fordbrasil/" title="Instagram"><img src="img/instagram-logo-50.png" alt="logo instagram"></a></li>
+                <li><a href="https://www.facebook.com/FordBrasil/" title="Facebook"><img class="icone-redes" src="img/facebook-50.png" alt="logo facebook"></a></li>
+                <li><a href="https://www.youtube.com/fordbrasil" title="YouTube"><img class="icone-redes" src="img/youtube-squared-50.png" alt="logo youtube"></a></li>
+                <li><a href="https://www.instagram.com/fordbrasil/" title="Instagram"><img class="icone-redes" src="img/instagram-logo-50.png" alt="logo instagram"></a></li>
             </ul>
         </nav>
         <div>
