--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <nav id="social">
             <ul>
                 <li><span class="redesociais">Redes Sociais</span></li>
-                <li><a href="https://www.facebook.com/FordBrasil/" title="Facebook"><img src="img/facebook-50.png" alt="logo facebook"></a></li>
-                <li><a href="https://www.youtube.com/fordbrasil" title="YouTube"><img src="img/youtube-squared-50.png" alt="logo youtube"></a></li>
-                <li><a href="https://www.instagram.com/fordbrasil/" title="Instagram"><img src="img/instagram-logo-50.png" alt="logo instagram"></a></li>
+                <li><a  href="https://www.facebook.com/FordBrasil/" title="Facebook"><img  class="icone-redes" src="img/facebook-50.png" alt="logo facebook"></a></li>
+                <li><a  href="https://www.youtube.com/fordbrasil" title="YouTube"><img class="icone-redes" src="img/youtube-squared-50.png" alt="logo youtube"></a></li>
+                <li><a  href="https://www.instagram.com/fordbrasil/" title="Instagram"><img class="icone-redes" src="img/instagram-logo-50.png" alt="logo instagram"></a></li>
             </ul>
         </nav>
         <div>
