sprint js finalizada

--- a/contato.html
+++ b/contato.html
@@ -39,7 +39,7 @@
             </div>
             <div>
                 <h2 class="titulo">Sobre Você</h2>
-            <form onsubmit="Post(this);">
+            <form onsubmit="Post(this); return false;">
                 <input type="text" name="nome" id="name" placeholder="NOME*" class="fordform" required>
                 <input type="text" name="email" placeholder="E-MAIL*" class="fordform" required>
                 <input type="text" name="cpf" id="cpf" placeholder="CPF*" class="fordform" required>
