--- a/contato.html
+++ b/contato.html
@@ -36,22 +36,25 @@
         <div>
           <img src="img/xls 2.2 diesel.jpg" />
         </div>
-        <div>
+        <div class="lgpd">
           <h2 class="titulo">Sobre Você</h2>
-          <form onsubmit="Post(this); return false;">
+          <form autocomplete="off" onsubmit="Post(this); return false;">
             <input
               type="text"
               name="nome"
               id="name"
               placeholder="NOME*"
               class="fordform"
+              autocomplete="off"
               required
             />
             <input
               type="text"
               name="email"
+              id="email"
               placeholder="E-MAIL*"
               class="fordform"
+              autocomplete="off"
               required
             />
             <input
@@ -59,6 +62,7 @@
               name="cpf"
               id="cpf"
               placeholder="CPF*"
+              autocomplete="off"
               class="fordform"
               required
             />
@@ -67,6 +71,7 @@
               name="sobrenome"
               placeholder="SOBRENOME*"
               class="fordform"
+              autocomplete="off"
               required
             />
             <input
@@ -76,6 +81,7 @@
               placeholder="TELEFONE*"
               id="telefone"
               class="fordform"
+              autocomplete="off"
               required
             />
             <select name="contato" class="fordform" required>
@@ -83,6 +89,23 @@
               <option>TELEFONE</option>
               <option>E-MAIL</option>
             </select>
+            <p class="texto_lgpd">
+              Os dados serão mantidos em nossa base de 
+              dados, só enquanto desejado por você.
+              A qualquer momento, será possível editar ou<
+              remover tais dados. <a>Termos e Condições.
+            </p>
+
+            <label>
+              <input
+                type="checkbox"
+                name="lgpd"
+                id="lgpd"
+                required
+              />
+              Aceito os termos de uso e a política de privacidade
+            </label>
+            
             <button type="submit">Enviar</button>
           </form>
         </div>
