--- a/contato.html
+++ b/contato.html
@@ -102,7 +102,7 @@
                 type="checkbox"
                 name="lgpd"
                 id="lgpd"
-                required
+                
               />
               Aceito os termos de uso e a política de privacidade
             </label>
@@ -110,9 +110,9 @@
             <label>
               <input
                 type="checkbox"
-                name="lgpd"
-                id="lgpd"
-                required
+                name="promocao"
+                id="promocao"
+                
               />
               Sim, também quero receber descontos e novidades.
             </label>
