--- a/contato.html
+++ b/contato.html
@@ -118,7 +118,7 @@
             </label>
           </div>
           
-          <button type="submit">Enviar</button>
+          <button type="submit" id="botao_enviar" disabled>Enviar</button>
           </form>
         </div>
       </div>
