codigo finalizado da sprint lgpd

--- a/contato.html
+++ b/contato.html
@@ -62,6 +62,7 @@
               name="cpf"
               id="cpf"
               placeholder="CPF*"
+              maxlength="14"
               autocomplete="off"
               class="fordform"
               required
@@ -80,6 +81,7 @@
               id="telefone"
               placeholder="TELEFONE*"
               id="telefone"
+              maxlength="15"
               class="fordform"
               autocomplete="off"
               required
