mais uma sprint vencida, LGPD

--- a/contato.html
+++ b/contato.html
@@ -96,6 +96,7 @@
               dados, só enquanto desejado por você.
               A qualquer momento, será possível editar ou
               remover tais dados. <a href="https://www.ford.com.br/politica-de-privacidade/">Termos e Condições.</a>
+              <strong>Se concorda com os termos, clique em "Aceito os termos de uso e a política de privacidade".</strong>
             </p>
             
             <div class="botao_lgpd">
